# analyze.docu.global

./: README.md
client/: .eslintignore  .eslintrc.json  package-lock.json  package.json  tailwind.config.js
client/src/components/: Header.tsx
client/src/components/forms/: FileUploadForm.tsx
client/src/components/layouts/default/: Footer.tsx  Header.tsx  index.tsx
client/src/components/navbar/: Navbar.tsx  NavbarBrand.tsx  NavbarLinks.tsx  ThemeSwitcher.tsx
client/src/components/ui/: Button.tsx  Container.tsx  ErrorCard.tsx  ResponseCard.tsx  Wrapper.tsx
client/src/pages/: _app.tsx  index.tsx
client/src/utils/: cx.ts
server/: .env.example
server/api/: openai_api.py  routes.py
server/services/analyzers/: pdf_analyzer.py
services/extraction/: README.md  app.py  requirements.txt
services/llama2/: .gitignore  app.py  pyproject.toml  requirements.txt
