[tool.poetry]
name = "analyzedocu - llama2"
version = "0.1.0"
description = ""
authors = ["ibnsan <antvelkol@gmail.com>"]
license = "MPL-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.273"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
ctransformers = "^0.2.24"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
